src/core/semantic_analysis/snapshots/blueberry__core__semantic_analysis__hir_dumper__tests__hir_dump@boolean_literal.bb.snap
---
source: src/core/semantic_analysis/hir_dumper.rs
expression: "HirDumper::dump_file(&db, file)"
input_file: src/core/syntactic_analysis/snapshot_inputs/boolean_literal.bb
---
function f()
└─ Block
   ├─ Expression ;
   │  └─ Boolean true
   └─ Expression ;
      └─ Boolean false
