src/core/semantic_analysis/snapshots/blueberry__core__semantic_analysis__hir_dumper__tests__hir_dump@const.bb.snap
---
source: src/core/semantic_analysis/hir_dumper.rs
expression: "HirDumper::dump_file(&db, file)"
input_file: src/core/syntactic_analysis/snapshot_inputs/const.bb
---
constant THRESHOLD: I32
└─ Integer 10

constant ENABLED: Bool
└─ Boolean true

function f()
└─ Block
   └─ Let x
      ├─ type: I32
      └─ initializer: Path THRESHOLD
