src/core/semantic_analysis/snapshots/blueberry__core__semantic_analysis__hir_dumper__tests__hir_dump@error_recovery.bb.snap
---
source: src/core/semantic_analysis/hir_dumper.rs
expression: "HirDumper::dump_file(&db, file)"
input_file: src/core/syntactic_analysis/snapshot_inputs/error_recovery.bb
---
function f()
└─ Block
   └─ Let x
      └─ initializer: Integer 1

function fib(n: i32) -> i32
└─ Block
   ├─ Let x
   │  └─ initializer: Binary +
   │     ├─ Integer 1
   │     └─ Hole
   └─ Let y
      └─ initializer: Integer 2
